<package format="3">
  <name>pipelineWayfinder</name>
  <version>0.1.0</version>
  <description>ROS2 wayfinder package</description>
  <maintainer email="felicic@stud.ntnu.no">Felicia Creutzig</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>Armadillo</build_depend>
    

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
